--- a/ayuda.css
+++ b/ayuda.css
@@ -8,7 +8,7 @@ body {
     max-height: none;
   grid-gap: 0px;
   grid-template-columns: 1fr 102px 380px 134px 134px 380px 102px 1fr;
-    grid-template-rows: 120px 76px 1179px 120px 78px;
+    grid-template-rows: 85px 103px 123px 696px 80px 311px 80px 180px 142px 89px 57px 47px 531px 57px 47px 384px 363px 57px 47px 450px 105px 135px 642px 164px 70px 80px 124px;
   background-color: #FFFFFF;
   padding: 0px;
 }
